cool-treewalk-interpreter/parser/main.output
   0  $accept : %entry% $end

   1  program : class_list

   2  class_list :
   3             | structure SEMI class_list

   4  structure : CLASS TYPE LBRACE feature_list RBRACE
   5            | CLASS TYPE INHERITS TYPE LBRACE feature_list RBRACE

   6  feature_list :
   7               | feature SEMI feature_list

   8  feature : IDENTIFIER COLON TYPE
   9          | IDENTIFIER COLON TYPE LARROW expr
  10          | IDENTIFIER LPAREN formal_list RPAREN COLON TYPE LBRACE expr RBRACE

  11  formal_list :
  12              | formal
  13              | formal COMMA formal_list

  14  formal : IDENTIFIER COLON TYPE

  15  expr_list :
  16            | expr
  17            | expr COMMA expr_list

  18  expr : IDENTIFIER LARROW expr
  19       | cmp_expr

  20  cmp_expr : cmp_expr LT sum_expr
  21           | cmp_expr LE sum_expr
  22           | cmp_expr EQUALS sum_expr
  23           | sum_expr

  24  sum_expr : sum_expr PLUS product_expr
  25           | sum_expr MINUS product_expr
  26           | product_expr

  27  product_expr : product_expr TIMES unary_expr
  28               | product_expr DIVIDE unary_expr
  29               | unary_expr

  30  unary_expr : TILDE unary_expr
  31             | NOT unary_expr
  32             | ISVOID unary_expr
  33             | primary_expr

  34  primary_expr : primary_base primary_suffixes

  35  primary_base : IF expr THEN expr ELSE expr FI
  36               | WHILE expr LOOP expr POOL
  37               | LET let_binding_list IN expr
  38               | CASE expr OF case_list ESAC
  39               | IDENTIFIER LPAREN expr_list RPAREN
  40               | NEW TYPE
  41               | LPAREN expr RPAREN
  42               | LBRACE block_elems RBRACE
  43               | IDENTIFIER
  44               | INTEGER
  45               | STRING
  46               | TRUE
  47               | FALSE

  48  primary_suffixes :
  49                   | primary_suffix primary_suffixes

  50  primary_suffix : DOT IDENTIFIER LPAREN expr_list RPAREN
  51                 | AT TYPE DOT IDENTIFIER LPAREN expr_list RPAREN

  52  block_elems : expr SEMI block_elems
  53              | expr SEMI

  54  let_binding : IDENTIFIER COLON TYPE
  55              | IDENTIFIER COLON TYPE LARROW expr

  56  let_binding_list : let_binding
  57                   | let_binding COMMA let_binding_list

  58  case_branch : IDENTIFIER COLON TYPE RARROW expr

  59  case_list : case_branch SEMI
  60            | case_branch SEMI case_list

  61  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (61)
	class_list : .  (2)

	CLASS  shift 3
	$end  reduce 2

	program  goto 4
	class_list  goto 5
	structure  goto 6


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	structure : CLASS . TYPE LBRACE feature_list RBRACE  (4)
	structure : CLASS . TYPE INHERITS TYPE LBRACE feature_list RBRACE  (5)

	TYPE  shift 7
	.  error


state 4
	%entry% : '\001' program .  (61)

	.  reduce 61


state 5
	program : class_list .  (1)

	.  reduce 1


state 6
	class_list : structure . SEMI class_list  (3)

	SEMI  shift 8
	.  error


state 7
	structure : CLASS TYPE . LBRACE feature_list RBRACE  (4)
	structure : CLASS TYPE . INHERITS TYPE LBRACE feature_list RBRACE  (5)

	LBRACE  shift 9
	INHERITS  shift 10
	.  error


state 8
	class_list : structure SEMI . class_list  (3)
	class_list : .  (2)

	CLASS  shift 3
	$end  reduce 2

	class_list  goto 11
	structure  goto 6


state 9
	structure : CLASS TYPE LBRACE . feature_list RBRACE  (4)
	feature_list : .  (6)

	IDENTIFIER  shift 12
	RBRACE  reduce 6

	feature_list  goto 13
	feature  goto 14


state 10
	structure : CLASS TYPE INHERITS . TYPE LBRACE feature_list RBRACE  (5)

	TYPE  shift 15
	.  error


state 11
	class_list : structure SEMI class_list .  (3)

	.  reduce 3


state 12
	feature : IDENTIFIER . COLON TYPE  (8)
	feature : IDENTIFIER . COLON TYPE LARROW expr  (9)
	feature : IDENTIFIER . LPAREN formal_list RPAREN COLON TYPE LBRACE expr RBRACE  (10)

	COLON  shift 16
	LPAREN  shift 17
	.  error


state 13
	structure : CLASS TYPE LBRACE feature_list . RBRACE  (4)

	RBRACE  shift 18
	.  error


state 14
	feature_list : feature . SEMI feature_list  (7)

	SEMI  shift 19
	.  error


state 15
	structure : CLASS TYPE INHERITS TYPE . LBRACE feature_list RBRACE  (5)

	LBRACE  shift 20
	.  error


state 16
	feature : IDENTIFIER COLON . TYPE  (8)
	feature : IDENTIFIER COLON . TYPE LARROW expr  (9)

	TYPE  shift 21
	.  error


state 17
	feature : IDENTIFIER LPAREN . formal_list RPAREN COLON TYPE LBRACE expr RBRACE  (10)
	formal_list : .  (11)

	IDENTIFIER  shift 22
	RPAREN  reduce 11

	formal_list  goto 23
	formal  goto 24


state 18
	structure : CLASS TYPE LBRACE feature_list RBRACE .  (4)

	.  reduce 4


state 19
	feature_list : feature SEMI . feature_list  (7)
	feature_list : .  (6)

	IDENTIFIER  shift 12
	RBRACE  reduce 6

	feature_list  goto 25
	feature  goto 14


state 20
	structure : CLASS TYPE INHERITS TYPE LBRACE . feature_list RBRACE  (5)
	feature_list : .  (6)

	IDENTIFIER  shift 12
	RBRACE  reduce 6

	feature_list  goto 26
	feature  goto 14


state 21
	feature : IDENTIFIER COLON TYPE .  (8)
	feature : IDENTIFIER COLON TYPE . LARROW expr  (9)

	LARROW  shift 27
	SEMI  reduce 8


state 22
	formal : IDENTIFIER . COLON TYPE  (14)

	COLON  shift 28
	.  error


state 23
	feature : IDENTIFIER LPAREN formal_list . RPAREN COLON TYPE LBRACE expr RBRACE  (10)

	RPAREN  shift 29
	.  error


state 24
	formal_list : formal .  (12)
	formal_list : formal . COMMA formal_list  (13)

	COMMA  shift 30
	RPAREN  reduce 12


state 25
	feature_list : feature SEMI feature_list .  (7)

	.  reduce 7


state 26
	structure : CLASS TYPE INHERITS TYPE LBRACE feature_list . RBRACE  (5)

	RBRACE  shift 31
	.  error


state 27
	feature : IDENTIFIER COLON TYPE LARROW . expr  (9)

	STRING  shift 32
	IDENTIFIER  shift 33
	INTEGER  shift 34
	TILDE  shift 35
	LBRACE  shift 36
	LPAREN  shift 37
	TRUE  shift 38
	FALSE  shift 39
	NEW  shift 40
	NOT  shift 41
	LET  shift 42
	CASE  shift 43
	ISVOID  shift 44
	IF  shift 45
	WHILE  shift 46
	.  error

	expr  goto 47
	cmp_expr  goto 48
	sum_expr  goto 49
	product_expr  goto 50
	unary_expr  goto 51
	primary_expr  goto 52
	primary_base  goto 53


state 28
	formal : IDENTIFIER COLON . TYPE  (14)

	TYPE  shift 54
	.  error


state 29
	feature : IDENTIFIER LPAREN formal_list RPAREN . COLON TYPE LBRACE expr RBRACE  (10)

	COLON  shift 55
	.  error


state 30
	formal_list : formal COMMA . formal_list  (13)
	formal_list : .  (11)

	IDENTIFIER  shift 22
	RPAREN  reduce 11

	formal_list  goto 56
	formal  goto 24


state 31
	structure : CLASS TYPE INHERITS TYPE LBRACE feature_list RBRACE .  (5)

	.  reduce 5


state 32
	primary_base : STRING .  (45)

	.  reduce 45


state 33
	expr : IDENTIFIER . LARROW expr  (18)
	primary_base : IDENTIFIER . LPAREN expr_list RPAREN  (39)
	primary_base : IDENTIFIER .  (43)

	LPAREN  shift 57
	LARROW  shift 58
	PLUS  reduce 43
	MINUS  reduce 43
	TIMES  reduce 43
	DIVIDE  reduce 43
	EQUALS  reduce 43
	AT  reduce 43
	LT  reduce 43
	SEMI  reduce 43
	DOT  reduce 43
	COMMA  reduce 43
	RBRACE  reduce 43
	RPAREN  reduce 43
	LE  reduce 43
	ELSE  reduce 43
	LOOP  reduce 43
	POOL  reduce 43
	OF  reduce 43
	IN  reduce 43
	FI  reduce 43
	THEN  reduce 43


state 34
	primary_base : INTEGER .  (44)

	.  reduce 44


state 35
	unary_expr : TILDE . unary_expr  (30)

	STRING  shift 32
	IDENTIFIER  shift 59
	INTEGER  shift 34
	TILDE  shift 35
	LBRACE  shift 36
	LPAREN  shift 37
	TRUE  shift 38
	FALSE  shift 39
	NEW  shift 40
	NOT  shift 41
	LET  shift 42
	CASE  shift 43
	ISVOID  shift 44
	IF  shift 45
	WHILE  shift 46
	.  error

	unary_expr  goto 60
	primary_expr  goto 52
	primary_base  goto 53


state 36
	primary_base : LBRACE . block_elems RBRACE  (42)

	STRING  shift 32
	IDENTIFIER  shift 33
	INTEGER  shift 34
	TILDE  shift 35
	LBRACE  shift 36
	LPAREN  shift 37
	TRUE  shift 38
	FALSE  shift 39
	NEW  shift 40
	NOT  shift 41
	LET  shift 42
	CASE  shift 43
	ISVOID  shift 44
	IF  shift 45
	WHILE  shift 46
	.  error

	expr  goto 61
	cmp_expr  goto 48
	sum_expr  goto 49
	product_expr  goto 50
	unary_expr  goto 51
	primary_expr  goto 52
	primary_base  goto 53
	block_elems  goto 62


state 37
	primary_base : LPAREN . expr RPAREN  (41)

	STRING  shift 32
	IDENTIFIER  shift 33
	INTEGER  shift 34
	TILDE  shift 35
	LBRACE  shift 36
	LPAREN  shift 37
	TRUE  shift 38
	FALSE  shift 39
	NEW  shift 40
	NOT  shift 41
	LET  shift 42
	CASE  shift 43
	ISVOID  shift 44
	IF  shift 45
	WHILE  shift 46
	.  error

	expr  goto 63
	cmp_expr  goto 48
	sum_expr  goto 49
	product_expr  goto 50
	unary_expr  goto 51
	primary_expr  goto 52
	primary_base  goto 53


state 38
	primary_base : TRUE .  (46)

	.  reduce 46


state 39
	primary_base : FALSE .  (47)

	.  reduce 47


state 40
	primary_base : NEW . TYPE  (40)

	TYPE  shift 64
	.  error


state 41
	unary_expr : NOT . unary_expr  (31)

	STRING  shift 32
	IDENTIFIER  shift 59
	INTEGER  shift 34
	TILDE  shift 35
	LBRACE  shift 36
	LPAREN  shift 37
	TRUE  shift 38
	FALSE  shift 39
	NEW  shift 40
	NOT  shift 41
	LET  shift 42
	CASE  shift 43
	ISVOID  shift 44
	IF  shift 45
	WHILE  shift 46
	.  error

	unary_expr  goto 65
	primary_expr  goto 52
	primary_base  goto 53


state 42
	primary_base : LET . let_binding_list IN expr  (37)

	IDENTIFIER  shift 66
	.  error

	let_binding_list  goto 67
	let_binding  goto 68


state 43
	primary_base : CASE . expr OF case_list ESAC  (38)

	STRING  shift 32
	IDENTIFIER  shift 33
	INTEGER  shift 34
	TILDE  shift 35
	LBRACE  shift 36
	LPAREN  shift 37
	TRUE  shift 38
	FALSE  shift 39
	NEW  shift 40
	NOT  shift 41
	LET  shift 42
	CASE  shift 43
	ISVOID  shift 44
	IF  shift 45
	WHILE  shift 46
	.  error

	expr  goto 69
	cmp_expr  goto 48
	sum_expr  goto 49
	product_expr  goto 50
	unary_expr  goto 51
	primary_expr  goto 52
	primary_base  goto 53


state 44
	unary_expr : ISVOID . unary_expr  (32)

	STRING  shift 32
	IDENTIFIER  shift 59
	INTEGER  shift 34
	TILDE  shift 35
	LBRACE  shift 36
	LPAREN  shift 37
	TRUE  shift 38
	FALSE  shift 39
	NEW  shift 40
	NOT  shift 41
	LET  shift 42
	CASE  shift 43
	ISVOID  shift 44
	IF  shift 45
	WHILE  shift 46
	.  error

	unary_expr  goto 70
	primary_expr  goto 52
	primary_base  goto 53


state 45
	primary_base : IF . expr THEN expr ELSE expr FI  (35)

	STRING  shift 32
	IDENTIFIER  shift 33
	INTEGER  shift 34
	TILDE  shift 35
	LBRACE  shift 36
	LPAREN  shift 37
	TRUE  shift 38
	FALSE  shift 39
	NEW  shift 40
	NOT  shift 41
	LET  shift 42
	CASE  shift 43
	ISVOID  shift 44
	IF  shift 45
	WHILE  shift 46
	.  error

	expr  goto 71
	cmp_expr  goto 48
	sum_expr  goto 49
	product_expr  goto 50
	unary_expr  goto 51
	primary_expr  goto 52
	primary_base  goto 53


state 46
	primary_base : WHILE . expr LOOP expr POOL  (36)

	STRING  shift 32
	IDENTIFIER  shift 33
	INTEGER  shift 34
	TILDE  shift 35
	LBRACE  shift 36
	LPAREN  shift 37
	TRUE  shift 38
	FALSE  shift 39
	NEW  shift 40
	NOT  shift 41
	LET  shift 42
	CASE  shift 43
	ISVOID  shift 44
	IF  shift 45
	WHILE  shift 46
	.  error

	expr  goto 72
	cmp_expr  goto 48
	sum_expr  goto 49
	product_expr  goto 50
	unary_expr  goto 51
	primary_expr  goto 52
	primary_base  goto 53


state 47
	feature : IDENTIFIER COLON TYPE LARROW expr .  (9)

	.  reduce 9


48: shift/reduce conflict (shift 73, reduce 19) on EQUALS
48: shift/reduce conflict (shift 74, reduce 19) on LT
48: shift/reduce conflict (shift 75, reduce 19) on LE
state 48
	expr : cmp_expr .  (19)
	cmp_expr : cmp_expr . LT sum_expr  (20)
	cmp_expr : cmp_expr . LE sum_expr  (21)
	cmp_expr : cmp_expr . EQUALS sum_expr  (22)

	EQUALS  shift 73
	LT  shift 74
	LE  shift 75
	PLUS  reduce 19
	MINUS  reduce 19
	TIMES  reduce 19
	DIVIDE  reduce 19
	AT  reduce 19
	SEMI  reduce 19
	DOT  reduce 19
	COMMA  reduce 19
	RBRACE  reduce 19
	RPAREN  reduce 19
	ELSE  reduce 19
	LOOP  reduce 19
	POOL  reduce 19
	OF  reduce 19
	IN  reduce 19
	FI  reduce 19
	THEN  reduce 19


49: shift/reduce conflict (shift 76, reduce 23) on PLUS
49: shift/reduce conflict (shift 77, reduce 23) on MINUS
state 49
	cmp_expr : sum_expr .  (23)
	sum_expr : sum_expr . PLUS product_expr  (24)
	sum_expr : sum_expr . MINUS product_expr  (25)

	PLUS  shift 76
	MINUS  shift 77
	TIMES  reduce 23
	DIVIDE  reduce 23
	EQUALS  reduce 23
	AT  reduce 23
	LT  reduce 23
	SEMI  reduce 23
	DOT  reduce 23
	COMMA  reduce 23
	RBRACE  reduce 23
	RPAREN  reduce 23
	LE  reduce 23
	ELSE  reduce 23
	LOOP  reduce 23
	POOL  reduce 23
	OF  reduce 23
	IN  reduce 23
	FI  reduce 23
	THEN  reduce 23


50: shift/reduce conflict (shift 78, reduce 26) on TIMES
50: shift/reduce conflict (shift 79, reduce 26) on DIVIDE
state 50
	sum_expr : product_expr .  (26)
	product_expr : product_expr . TIMES unary_expr  (27)
	product_expr : product_expr . DIVIDE unary_expr  (28)

	TIMES  shift 78
	DIVIDE  shift 79
	PLUS  reduce 26
	MINUS  reduce 26
	EQUALS  reduce 26
	AT  reduce 26
	LT  reduce 26
	SEMI  reduce 26
	DOT  reduce 26
	COMMA  reduce 26
	RBRACE  reduce 26
	RPAREN  reduce 26
	LE  reduce 26
	ELSE  reduce 26
	LOOP  reduce 26
	POOL  reduce 26
	OF  reduce 26
	IN  reduce 26
	FI  reduce 26
	THEN  reduce 26


state 51
	product_expr : unary_expr .  (29)

	.  reduce 29


state 52
	unary_expr : primary_expr .  (33)

	.  reduce 33


53: shift/reduce conflict (shift 80, reduce 48) on AT
53: shift/reduce conflict (shift 81, reduce 48) on DOT
state 53
	primary_expr : primary_base . primary_suffixes  (34)
	primary_suffixes : .  (48)

	AT  shift 80
	DOT  shift 81
	PLUS  reduce 48
	MINUS  reduce 48
	TIMES  reduce 48
	DIVIDE  reduce 48
	EQUALS  reduce 48
	LT  reduce 48
	SEMI  reduce 48
	COMMA  reduce 48
	RBRACE  reduce 48
	RPAREN  reduce 48
	LE  reduce 48
	ELSE  reduce 48
	LOOP  reduce 48
	POOL  reduce 48
	OF  reduce 48
	IN  reduce 48
	FI  reduce 48
	THEN  reduce 48

	primary_suffixes  goto 82
	primary_suffix  goto 83


state 54
	formal : IDENTIFIER COLON TYPE .  (14)

	.  reduce 14


state 55
	feature : IDENTIFIER LPAREN formal_list RPAREN COLON . TYPE LBRACE expr RBRACE  (10)

	TYPE  shift 84
	.  error


state 56
	formal_list : formal COMMA formal_list .  (13)

	.  reduce 13


state 57
	primary_base : IDENTIFIER LPAREN . expr_list RPAREN  (39)
	expr_list : .  (15)

	STRING  shift 32
	IDENTIFIER  shift 33
	INTEGER  shift 34
	TILDE  shift 35
	LBRACE  shift 36
	LPAREN  shift 37
	TRUE  shift 38
	FALSE  shift 39
	NEW  shift 40
	NOT  shift 41
	LET  shift 42
	CASE  shift 43
	ISVOID  shift 44
	IF  shift 45
	WHILE  shift 46
	RPAREN  reduce 15

	expr  goto 85
	cmp_expr  goto 48
	sum_expr  goto 49
	product_expr  goto 50
	unary_expr  goto 51
	primary_expr  goto 52
	primary_base  goto 53
	expr_list  goto 86


state 58
	expr : IDENTIFIER LARROW . expr  (18)

	STRING  shift 32
	IDENTIFIER  shift 33
	INTEGER  shift 34
	TILDE  shift 35
	LBRACE  shift 36
	LPAREN  shift 37
	TRUE  shift 38
	FALSE  shift 39
	NEW  shift 40
	NOT  shift 41
	LET  shift 42
	CASE  shift 43
	ISVOID  shift 44
	IF  shift 45
	WHILE  shift 46
	.  error

	expr  goto 87
	cmp_expr  goto 48
	sum_expr  goto 49
	product_expr  goto 50
	unary_expr  goto 51
	primary_expr  goto 52
	primary_base  goto 53


state 59
	primary_base : IDENTIFIER . LPAREN expr_list RPAREN  (39)
	primary_base : IDENTIFIER .  (43)

	LPAREN  shift 57
	PLUS  reduce 43
	MINUS  reduce 43
	TIMES  reduce 43
	DIVIDE  reduce 43
	EQUALS  reduce 43
	AT  reduce 43
	LT  reduce 43
	SEMI  reduce 43
	DOT  reduce 43
	COMMA  reduce 43
	RBRACE  reduce 43
	RPAREN  reduce 43
	LE  reduce 43
	ELSE  reduce 43
	LOOP  reduce 43
	POOL  reduce 43
	OF  reduce 43
	IN  reduce 43
	FI  reduce 43
	THEN  reduce 43


state 60
	unary_expr : TILDE unary_expr .  (30)

	.  reduce 30


state 61
	block_elems : expr . SEMI block_elems  (52)
	block_elems : expr . SEMI  (53)

	SEMI  shift 88
	.  error


state 62
	primary_base : LBRACE block_elems . RBRACE  (42)

	RBRACE  shift 89
	.  error


state 63
	primary_base : LPAREN expr . RPAREN  (41)

	RPAREN  shift 90
	.  error


state 64
	primary_base : NEW TYPE .  (40)

	.  reduce 40


state 65
	unary_expr : NOT unary_expr .  (31)

	.  reduce 31


state 66
	let_binding : IDENTIFIER . COLON TYPE  (54)
	let_binding : IDENTIFIER . COLON TYPE LARROW expr  (55)

	COLON  shift 91
	.  error


state 67
	primary_base : LET let_binding_list . IN expr  (37)

	IN  shift 92
	.  error


state 68
	let_binding_list : let_binding .  (56)
	let_binding_list : let_binding . COMMA let_binding_list  (57)

	COMMA  shift 93
	IN  reduce 56


state 69
	primary_base : CASE expr . OF case_list ESAC  (38)

	OF  shift 94
	.  error


state 70
	unary_expr : ISVOID unary_expr .  (32)

	.  reduce 32


state 71
	primary_base : IF expr . THEN expr ELSE expr FI  (35)

	THEN  shift 95
	.  error


state 72
	primary_base : WHILE expr . LOOP expr POOL  (36)

	LOOP  shift 96
	.  error


state 73
	cmp_expr : cmp_expr EQUALS . sum_expr  (22)

	STRING  shift 32
	IDENTIFIER  shift 59
	INTEGER  shift 34
	TILDE  shift 35
	LBRACE  shift 36
	LPAREN  shift 37
	TRUE  shift 38
	FALSE  shift 39
	NEW  shift 40
	NOT  shift 41
	LET  shift 42
	CASE  shift 43
	ISVOID  shift 44
	IF  shift 45
	WHILE  shift 46
	.  error

	sum_expr  goto 97
	product_expr  goto 50
	unary_expr  goto 51
	primary_expr  goto 52
	primary_base  goto 53


state 74
	cmp_expr : cmp_expr LT . sum_expr  (20)

	STRING  shift 32
	IDENTIFIER  shift 59
	INTEGER  shift 34
	TILDE  shift 35
	LBRACE  shift 36
	LPAREN  shift 37
	TRUE  shift 38
	FALSE  shift 39
	NEW  shift 40
	NOT  shift 41
	LET  shift 42
	CASE  shift 43
	ISVOID  shift 44
	IF  shift 45
	WHILE  shift 46
	.  error

	sum_expr  goto 98
	product_expr  goto 50
	unary_expr  goto 51
	primary_expr  goto 52
	primary_base  goto 53


state 75
	cmp_expr : cmp_expr LE . sum_expr  (21)

	STRING  shift 32
	IDENTIFIER  shift 59
	INTEGER  shift 34
	TILDE  shift 35
	LBRACE  shift 36
	LPAREN  shift 37
	TRUE  shift 38
	FALSE  shift 39
	NEW  shift 40
	NOT  shift 41
	LET  shift 42
	CASE  shift 43
	ISVOID  shift 44
	IF  shift 45
	WHILE  shift 46
	.  error

	sum_expr  goto 99
	product_expr  goto 50
	unary_expr  goto 51
	primary_expr  goto 52
	primary_base  goto 53


state 76
	sum_expr : sum_expr PLUS . product_expr  (24)

	STRING  shift 32
	IDENTIFIER  shift 59
	INTEGER  shift 34
	TILDE  shift 35
	LBRACE  shift 36
	LPAREN  shift 37
	TRUE  shift 38
	FALSE  shift 39
	NEW  shift 40
	NOT  shift 41
	LET  shift 42
	CASE  shift 43
	ISVOID  shift 44
	IF  shift 45
	WHILE  shift 46
	.  error

	product_expr  goto 100
	unary_expr  goto 51
	primary_expr  goto 52
	primary_base  goto 53


state 77
	sum_expr : sum_expr MINUS . product_expr  (25)

	STRING  shift 32
	IDENTIFIER  shift 59
	INTEGER  shift 34
	TILDE  shift 35
	LBRACE  shift 36
	LPAREN  shift 37
	TRUE  shift 38
	FALSE  shift 39
	NEW  shift 40
	NOT  shift 41
	LET  shift 42
	CASE  shift 43
	ISVOID  shift 44
	IF  shift 45
	WHILE  shift 46
	.  error

	product_expr  goto 101
	unary_expr  goto 51
	primary_expr  goto 52
	primary_base  goto 53


state 78
	product_expr : product_expr TIMES . unary_expr  (27)

	STRING  shift 32
	IDENTIFIER  shift 59
	INTEGER  shift 34
	TILDE  shift 35
	LBRACE  shift 36
	LPAREN  shift 37
	TRUE  shift 38
	FALSE  shift 39
	NEW  shift 40
	NOT  shift 41
	LET  shift 42
	CASE  shift 43
	ISVOID  shift 44
	IF  shift 45
	WHILE  shift 46
	.  error

	unary_expr  goto 102
	primary_expr  goto 52
	primary_base  goto 53


state 79
	product_expr : product_expr DIVIDE . unary_expr  (28)

	STRING  shift 32
	IDENTIFIER  shift 59
	INTEGER  shift 34
	TILDE  shift 35
	LBRACE  shift 36
	LPAREN  shift 37
	TRUE  shift 38
	FALSE  shift 39
	NEW  shift 40
	NOT  shift 41
	LET  shift 42
	CASE  shift 43
	ISVOID  shift 44
	IF  shift 45
	WHILE  shift 46
	.  error

	unary_expr  goto 103
	primary_expr  goto 52
	primary_base  goto 53


state 80
	primary_suffix : AT . TYPE DOT IDENTIFIER LPAREN expr_list RPAREN  (51)

	TYPE  shift 104
	.  error


state 81
	primary_suffix : DOT . IDENTIFIER LPAREN expr_list RPAREN  (50)

	IDENTIFIER  shift 105
	.  error


state 82
	primary_expr : primary_base primary_suffixes .  (34)

	.  reduce 34


83: shift/reduce conflict (shift 80, reduce 48) on AT
83: shift/reduce conflict (shift 81, reduce 48) on DOT
state 83
	primary_suffixes : primary_suffix . primary_suffixes  (49)
	primary_suffixes : .  (48)

	AT  shift 80
	DOT  shift 81
	PLUS  reduce 48
	MINUS  reduce 48
	TIMES  reduce 48
	DIVIDE  reduce 48
	EQUALS  reduce 48
	LT  reduce 48
	SEMI  reduce 48
	COMMA  reduce 48
	RBRACE  reduce 48
	RPAREN  reduce 48
	LE  reduce 48
	ELSE  reduce 48
	LOOP  reduce 48
	POOL  reduce 48
	OF  reduce 48
	IN  reduce 48
	FI  reduce 48
	THEN  reduce 48

	primary_suffixes  goto 106
	primary_suffix  goto 83


state 84
	feature : IDENTIFIER LPAREN formal_list RPAREN COLON TYPE . LBRACE expr RBRACE  (10)

	LBRACE  shift 107
	.  error


state 85
	expr_list : expr .  (16)
	expr_list : expr . COMMA expr_list  (17)

	COMMA  shift 108
	RPAREN  reduce 16


state 86
	primary_base : IDENTIFIER LPAREN expr_list . RPAREN  (39)

	RPAREN  shift 109
	.  error


state 87
	expr : IDENTIFIER LARROW expr .  (18)

	.  reduce 18


state 88
	block_elems : expr SEMI . block_elems  (52)
	block_elems : expr SEMI .  (53)

	STRING  shift 32
	IDENTIFIER  shift 33
	INTEGER  shift 34
	TILDE  shift 35
	LBRACE  shift 36
	LPAREN  shift 37
	TRUE  shift 38
	FALSE  shift 39
	NEW  shift 40
	NOT  shift 41
	LET  shift 42
	CASE  shift 43
	ISVOID  shift 44
	IF  shift 45
	WHILE  shift 46
	RBRACE  reduce 53

	expr  goto 61
	cmp_expr  goto 48
	sum_expr  goto 49
	product_expr  goto 50
	unary_expr  goto 51
	primary_expr  goto 52
	primary_base  goto 53
	block_elems  goto 110


state 89
	primary_base : LBRACE block_elems RBRACE .  (42)

	.  reduce 42


state 90
	primary_base : LPAREN expr RPAREN .  (41)

	.  reduce 41


state 91
	let_binding : IDENTIFIER COLON . TYPE  (54)
	let_binding : IDENTIFIER COLON . TYPE LARROW expr  (55)

	TYPE  shift 111
	.  error


state 92
	primary_base : LET let_binding_list IN . expr  (37)

	STRING  shift 32
	IDENTIFIER  shift 33
	INTEGER  shift 34
	TILDE  shift 35
	LBRACE  shift 36
	LPAREN  shift 37
	TRUE  shift 38
	FALSE  shift 39
	NEW  shift 40
	NOT  shift 41
	LET  shift 42
	CASE  shift 43
	ISVOID  shift 44
	IF  shift 45
	WHILE  shift 46
	.  error

	expr  goto 112
	cmp_expr  goto 48
	sum_expr  goto 49
	product_expr  goto 50
	unary_expr  goto 51
	primary_expr  goto 52
	primary_base  goto 53


state 93
	let_binding_list : let_binding COMMA . let_binding_list  (57)

	IDENTIFIER  shift 66
	.  error

	let_binding_list  goto 113
	let_binding  goto 68


state 94
	primary_base : CASE expr OF . case_list ESAC  (38)

	IDENTIFIER  shift 114
	.  error

	case_list  goto 115
	case_branch  goto 116


state 95
	primary_base : IF expr THEN . expr ELSE expr FI  (35)

	STRING  shift 32
	IDENTIFIER  shift 33
	INTEGER  shift 34
	TILDE  shift 35
	LBRACE  shift 36
	LPAREN  shift 37
	TRUE  shift 38
	FALSE  shift 39
	NEW  shift 40
	NOT  shift 41
	LET  shift 42
	CASE  shift 43
	ISVOID  shift 44
	IF  shift 45
	WHILE  shift 46
	.  error

	expr  goto 117
	cmp_expr  goto 48
	sum_expr  goto 49
	product_expr  goto 50
	unary_expr  goto 51
	primary_expr  goto 52
	primary_base  goto 53


state 96
	primary_base : WHILE expr LOOP . expr POOL  (36)

	STRING  shift 32
	IDENTIFIER  shift 33
	INTEGER  shift 34
	TILDE  shift 35
	LBRACE  shift 36
	LPAREN  shift 37
	TRUE  shift 38
	FALSE  shift 39
	NEW  shift 40
	NOT  shift 41
	LET  shift 42
	CASE  shift 43
	ISVOID  shift 44
	IF  shift 45
	WHILE  shift 46
	.  error

	expr  goto 118
	cmp_expr  goto 48
	sum_expr  goto 49
	product_expr  goto 50
	unary_expr  goto 51
	primary_expr  goto 52
	primary_base  goto 53


state 97
	cmp_expr : cmp_expr EQUALS sum_expr .  (22)
	sum_expr : sum_expr . PLUS product_expr  (24)
	sum_expr : sum_expr . MINUS product_expr  (25)

	PLUS  shift 76
	MINUS  shift 77
	TIMES  reduce 22
	DIVIDE  reduce 22
	EQUALS  reduce 22
	AT  reduce 22
	LT  reduce 22
	SEMI  reduce 22
	DOT  reduce 22
	COMMA  reduce 22
	RBRACE  reduce 22
	RPAREN  reduce 22
	LE  reduce 22
	ELSE  reduce 22
	LOOP  reduce 22
	POOL  reduce 22
	OF  reduce 22
	IN  reduce 22
	FI  reduce 22
	THEN  reduce 22


state 98
	cmp_expr : cmp_expr LT sum_expr .  (20)
	sum_expr : sum_expr . PLUS product_expr  (24)
	sum_expr : sum_expr . MINUS product_expr  (25)

	PLUS  shift 76
	MINUS  shift 77
	TIMES  reduce 20
	DIVIDE  reduce 20
	EQUALS  reduce 20
	AT  reduce 20
	LT  reduce 20
	SEMI  reduce 20
	DOT  reduce 20
	COMMA  reduce 20
	RBRACE  reduce 20
	RPAREN  reduce 20
	LE  reduce 20
	ELSE  reduce 20
	LOOP  reduce 20
	POOL  reduce 20
	OF  reduce 20
	IN  reduce 20
	FI  reduce 20
	THEN  reduce 20


state 99
	cmp_expr : cmp_expr LE sum_expr .  (21)
	sum_expr : sum_expr . PLUS product_expr  (24)
	sum_expr : sum_expr . MINUS product_expr  (25)

	PLUS  shift 76
	MINUS  shift 77
	TIMES  reduce 21
	DIVIDE  reduce 21
	EQUALS  reduce 21
	AT  reduce 21
	LT  reduce 21
	SEMI  reduce 21
	DOT  reduce 21
	COMMA  reduce 21
	RBRACE  reduce 21
	RPAREN  reduce 21
	LE  reduce 21
	ELSE  reduce 21
	LOOP  reduce 21
	POOL  reduce 21
	OF  reduce 21
	IN  reduce 21
	FI  reduce 21
	THEN  reduce 21


state 100
	sum_expr : sum_expr PLUS product_expr .  (24)
	product_expr : product_expr . TIMES unary_expr  (27)
	product_expr : product_expr . DIVIDE unary_expr  (28)

	TIMES  shift 78
	DIVIDE  shift 79
	PLUS  reduce 24
	MINUS  reduce 24
	EQUALS  reduce 24
	AT  reduce 24
	LT  reduce 24
	SEMI  reduce 24
	DOT  reduce 24
	COMMA  reduce 24
	RBRACE  reduce 24
	RPAREN  reduce 24
	LE  reduce 24
	ELSE  reduce 24
	LOOP  reduce 24
	POOL  reduce 24
	OF  reduce 24
	IN  reduce 24
	FI  reduce 24
	THEN  reduce 24


state 101
	sum_expr : sum_expr MINUS product_expr .  (25)
	product_expr : product_expr . TIMES unary_expr  (27)
	product_expr : product_expr . DIVIDE unary_expr  (28)
